--- a/_posts/2020-08-01-SMAL-CVPR2017.md
+++ b/_posts/2020-08-01-SMAL-CVPR2017.md
@@ -11,7 +11,9 @@ tags: papers cv
 > [Arxiv](https://arxiv.org/abs/1611.07700)
 
 <!--more-->
-![SMAL]({{ '/assets/images/SMAL-header.png' | relative_url }}) {: style="width: 100%;" class="center"} Fig.1: Predicted animal 3D shapes from images. (Image source: [Zuffi et al, CVPR 2017](https://arxiv.org/abs/1611.07700) )
+![SMAL]({{ '/assets/images/SMAL-header.png' | relative_url }}) 
+{: style="width: 100%;" class="center"} 
+*Fig. 1: Predicted animal 3D shapes from images. (Image source: [Zuffi et al, CVPR 2017](https://arxiv.org/abs/1611.07700))*
 
 We will discuss the method which allows to create a realistic 3D model of animals and to fit this model to 2D images [[paper PDF]](https://arxiv.org/abs/1611.07700). 
 
@@ -26,7 +28,9 @@ We will discuss the method which allows to create a realistic 3D model of animal
 ## Dataset
 The authors collected a dataset of 3D animals by scanning toy figurines.
 
-![3D Scans]({{ '/assets/images/SMAL-3d-scans.png' | relative_url }}) {: style="width: 80%;" class="center"} Fig.2: Examples of collected 3D scans of animal toys. (Image source: [Zuffi et al, CVPR 2017](https://arxiv.org/abs/1611.07700))
+![3D Scans]({{ '/assets/images/SMAL-3d-scans.png' | relative_url }}) 
+{: style="width: 80%;" class="center"} 
+*Fig. 2: Examples of collected 3D scans of animal toys. (Image source: [Zuffi et al, CVPR 2017](https://arxiv.org/abs/1611.07700))*
 
 
 A total of 41 scans from several species: 
@@ -47,19 +51,23 @@ To define GloSS authors do:
 - Get an animation sequence of this model using linear blend skinning (LBS).
 
 For this purpose authors used an off-the-shelf 3D mesh of a lioness which is already rigged and has predefined skinning weights.   
-![Reference mesh]({{ '/assets/images/SMAL-reference-mesh.png' | relative_url }}) {: style="width: 50%;" class="center"} Fig.3: 3D template mesh of a lioness used for GLoSS. Color denotes manually segmented 33 body parts. (Image source: [Zuffi et al, CVPR 2017](https://arxiv.org/abs/1611.07700))
+![Reference mesh]({{ '/assets/images/SMAL-reference-mesh.png' | relative_url }}) 
+{: style="width: 50%;" class="center"} 
+*Fig. 3: 3D template mesh of a lioness used for GLoSS. Color denotes manually segmented 33 body parts. (Image source: [Zuffi et al, CVPR 2017](https://arxiv.org/abs/1611.07700))*
 
 To get the pose deformation space for GloSS, authors perform PCA on the vertices of each frame in the animated 3D sequence.  
 To get the shape deformation space for GLoSS: authors model scale and stretch deformations along x,y,z axes for each body part using a Gaussian distribution.  
 
 After that, we can fit GLoSS model to every 3D scan from the training set using the gradient-based methods.  
-![GLoSS fitting]({{ '/assets/images/SMAL-gloss-fitting.png' | relative_url }}) {: style="width: 70%;" class="center"} Fig.4: GLoSS fitting. (a) Initial template and scan. (b)
-GLoSS fit to scan. (c) GLoSS model showing the parts. (d) Merged mesh with global topology obtained by removing 
-the duplicated vertices. (Image source: [Zuffi et al, CVPR 2017](https://arxiv.org/abs/1611.07700))
+![GLoSS fitting]({{ '/assets/images/SMAL-gloss-fitting.png' | relative_url }}) 
+{: style="width: 70%;" class="center"} 
+*Fig. 4: GLoSS fitting. (a) Initial template and scan. (b) GLoSS fit to scan. (c) GLoSS model showing the parts. (d) Merged mesh with global topology obtained by removing the duplicated vertices. (Image source: [Zuffi et al, CVPR 2017](https://arxiv.org/abs/1611.07700))*
 
 To bring the mesh vertices closer to the scan authors further align the vertices v of the model to the scans using the As-Rigid-As-Possible (ARAP) method [[2]](#2).
-![GLoSS + ARAP]({{ '/assets/images/SMAL-gloss-arap.png' | relative_url }}) {: style="width: 70%;" class="center"} Fig.5: Registration results. Comparing GLoSS (left)
-with the ARAP refinement (right). The fit to the scan is much tighter after refinement. (Image source: [Zuffi et al, CVPR 2017](https://arxiv.org/abs/1611.07700))
+![GLoSS + ARAP]({{ '/assets/images/SMAL-gloss-arap.png' | relative_url }}) 
+{: style="width: 70%;" class="center"} 
+*Fig. 5: Registration results. Comparing GLoSS (left)
+with the ARAP refinement (right). The fit to the scan is much tighter after refinement. (Image source: [Zuffi et al, CVPR 2017](https://arxiv.org/abs/1611.07700))*
 
 
 ## 2. Learning parametric SMAL model
@@ -67,8 +75,9 @@ Now, given the poses estimated with GLoSS, authors model shape variation across 
 1. Brining all the registered templates into the same **neutral pose** using LBS;
 2. **Learn shape space** by computing the mean shape and the principal components (PCA), which capture shape differences between the animals.
 
-![Shape space]({{ '/assets/images/SMAL-PCA.png' | relative_url }}) {: style="width: 70%;" class="center"} Fig.6: Visualization of the mean shape (in the center) and the 
-variation along the first 4 components of the learned shape PCA space. (Image source: [Zuffi et al, CVPR 2017](https://arxiv.org/abs/1611.07700))
+![Shape space]({{ '/assets/images/SMAL-PCA.png' | relative_url }}) 
+{: style="width: 100%;" class="center"} 
+* Fig. 6: Visualization of the mean shape (in the center) and the variation along the first 4 components of the learned shape PCA space. (Image source: [Zuffi et al, CVPR 2017](https://arxiv.org/abs/1611.07700))*
  
 SMAL is then a function which is parametrized by shape, pose, and translation parameters. The output of SMAL is a 3D mesh.
 
@@ -79,8 +88,9 @@ We fit the SMAL model to the image by fitting its parameters and camera pose usi
 Reprojection error is computed by rendering the estimated SMAL mesh, projecting it on the input image, and comparing the predicted keypoints and silhouette with those defined on the input image.
 The local optimum is found by iterative optimization. Optimization for a single image typically takes less than a minute.
 
-![Results]({{ '/assets/images/SMAL-results.png' | relative_url }}) {: style="width: 70%;" class="center"} Fig.7: Results of the SMAL model fi to real images using manually obtained
-2D keypoints and segmentation. (Image source: [Zuffi et al, CVPR 2017](https://arxiv.org/abs/1611.07700))
+![Results]({{ '/assets/images/SMAL-results.png' | relative_url }}) 
+{: style="width: 100%;" class="center"} 
+*Fig. 7: Results of the SMAL model fi to real images using manually obtained 2D keypoints and segmentation. (Image source: [Zuffi et al, CVPR 2017](https://arxiv.org/abs/1611.07700))*
  
 
 # Conclusion
