--- a/_posts/2020-08-01-SMAL-CVPR2017.md
+++ b/_posts/2020-08-01-SMAL-CVPR2017.md
@@ -24,8 +24,8 @@ We will discuss the method which allows to create a realistic 3D model of animal
 - one can fit SMAL to 2D data using detected keypoints and binary segmentations
 - SMAL can generate realistic animal shapes in a variety of poses.
 
-#  Method
-## Dataset
+##  Method
+### Dataset
 The authors collected a dataset of 3D animals by scanning toy figurines.
 
 ![3D Scans]({{ '/assets/images/SMAL-3d-scans.png' | relative_url }}) 
@@ -37,7 +37,7 @@ A total of 41 scans from several species:
 1 cat, 5 cheetahs, 8 lions, 7 tigers, 2 dogs, 1 fox, 1 wolf, 1 hyena, 1 deer, 1 horse, 6 zebras, 4 cows, 3 hippos.
 For every 3D scans authors manually annotated 36 semantically-aligned keypoints.
 
-## 1. Aligning, rigging, and parametrizing the training 3D scans by matching them with GLoSS model
+### 1. Aligning, rigging, and parametrizing the training 3D scans by matching them with GLoSS model
 The aim is to learn a parametric model from a set of training 3D scans, that covers all training shapes, generalizes to the shape of animals not seen during training, and can be fitted to the images of real animals.
 
 To learn such a model one needs to align all the training 3D scans and make them articulated by rigging.   
@@ -51,37 +51,40 @@ To define GloSS authors do:
 - Get an animation sequence of this model using linear blend skinning (LBS).
 
 For this purpose authors used an off-the-shelf 3D mesh of a lioness which is already rigged and has predefined skinning weights.   
+
 ![Reference mesh]({{ '/assets/images/SMAl-reference-mesh.png' | relative_url }}) 
-{: style="width: 70%;" class="center"} 
+{: style="width: 50%;" class="center"} 
 *Fig. 3: 3D template mesh of a lioness used for GLoSS. Color denotes manually segmented 33 body parts. (Image source: [Zuffi et al, CVPR 2017](https://arxiv.org/abs/1611.07700))*
 
 To get the pose deformation space for GloSS, authors perform PCA on the vertices of each frame in the animated 3D sequence.  
 To get the shape deformation space for GLoSS: authors model scale and stretch deformations along x,y,z axes for each body part using a Gaussian distribution.  
 
 After that, we can fit GLoSS model to every 3D scan from the training set using the gradient-based methods.  
+
 ![GLoSS fitting]({{ '/assets/images/SMALL-gloss-fitting.png' | relative_url }}) 
 {: style="width: 70%;" class="center"} 
 *Fig. 4: GLoSS fitting. (a) Initial template and scan. (b) GLoSS fit to scan. (c) GLoSS model showing the parts. (d) Merged mesh with global topology obtained by removing the duplicated vertices. (Image source: [Zuffi et al, CVPR 2017](https://arxiv.org/abs/1611.07700))*
 
 To bring the mesh vertices closer to the scan authors further align the vertices v of the model to the scans using the As-Rigid-As-Possible (ARAP) method [[2]](#2).
+
 ![GLoSS + ARAP]({{ '/assets/images/SMAL-gloss-arap.png' | relative_url }}) 
 {: style="width: 70%;" class="center"} 
 *Fig. 5: Registration results. Comparing GLoSS (left)
 with the ARAP refinement (right). The fit to the scan is much tighter after refinement. (Image source: [Zuffi et al, CVPR 2017](https://arxiv.org/abs/1611.07700))*
 
 
-## 2. Learning parametric SMAL model
+### 2. Learning parametric SMAL model
 Now, given the poses estimated with GLoSS, authors model shape variation across training dataset by   
 1. Brining all the registered templates into the same **neutral pose** using LBS;
 2. **Learn shape space** by computing the mean shape and the principal components (PCA), which capture shape differences between the animals.
 
 ![Shape space]({{ '/assets/images/SMAL-PCA.png' | relative_url }}) 
 {: style="width: 70%;" class="center"} 
-* Fig. 6: Visualization of the mean shape (in the center) and the variation along the first 4 components of the learned shape PCA space. (Image source: [Zuffi et al, CVPR 2017](https://arxiv.org/abs/1611.07700))*
+*Fig. 6: Visualization of the mean shape (in the center) and the variation along the first 4 components of the learned shape PCA space. (Image source: [Zuffi et al, CVPR 2017](https://arxiv.org/abs/1611.07700))*
  
 SMAL is then a function which is parametrized by shape, pose, and translation parameters. The output of SMAL is a 3D mesh.
 
-## 3. How to fit SMAL to a 2D image? 
+### 3. How to fit SMAL to a 2D image? 
 Given an input image with an animal, first, we need to manually annotate (or predict with another CNN) 36 keypoints and a binary foreground mask (silhouette).
 We fit the SMAL model to the image by fitting its parameters and camera pose using the keypoints and silhouette reprojection error.
 
@@ -90,10 +93,10 @@ The local optimum is found by iterative optimization. Optimization for a single 
 
 ![Results]({{ '/assets/images/SMAL-results.png' | relative_url }}) 
 {: style="width: 100%;" class="center"} 
-*Fig. 7: Results of the SMAL model fi to real images using manually obtained 2D keypoints and segmentation. (Image source: [Zuffi et al, CVPR 2017](https://arxiv.org/abs/1611.07700))*
+*Fig. 7: Results of the SMAL model fit to real images using manually obtained 2D keypoints and segmentation. (Image source: [Zuffi et al, CVPR 2017](https://arxiv.org/abs/1611.07700))*
  
 
-# Conclusion
+## Conclusion
 Authors showed that starting with toys' 3D scans, we can learn a model that generalizes to images of real animals as well as to types of animals not seen during training.
 The proposed parametric SMAL model is differentiable and can be fit to the data using gradient-based algorithms.
 
