--- a/_posts/2020-08-01-SMAL-CVPR2017.md
+++ b/_posts/2020-08-01-SMAL-CVPR2017.md
@@ -8,14 +8,13 @@ tags: papers cv
 
 
 > "3D Menagerie: Modeling the 3D Shape and Pose of Animal", Zuffi et al, CVPR 2017.
-> [Arxiv](https://arxiv.org/abs/1611.07700)
 
 <!--more-->
 ![SMAL]({{ '/assets/images/SMAL-header.png' | relative_url }}) 
 {: style="width: 100%;" class="center"} 
 *Fig. 1: Predicted animal 3D shapes from images. (Image source: [Zuffi et al, CVPR 2017](https://arxiv.org/abs/1611.07700))*
 
-We will discuss the method which allows to create a realistic 3D model of animals and to fit this model to 2D images [[paper PDF]](https://arxiv.org/abs/1611.07700). 
+We will discuss the method which allows to create a realistic 3D model of animals and to fit this model to 2D images [[Arxiv PDF]](https://arxiv.org/abs/1611.07700). 
 
 ## Main contribution:
 - Global/Local Stitched Shape model (GLoSS) which aligns a template mesh to different shapes, providing a coarse registration between very different animals.
