--- a/_posts/2020-08-01-SMAL-CVPR2017.md
+++ b/_posts/2020-08-01-SMAL-CVPR2017.md
@@ -51,7 +51,7 @@ To define GloSS authors do:
 
 For this purpose authors used an off-the-shelf 3D mesh of a lioness which is already rigged and has predefined skinning weights.   
 
-![Reference mesh]({{ '/assets/images/SMAl-reference-mesh.png' | relative_url }}) 
+![Reference mesh]({{ '/assets/images/SMAL-reference-mesh.png' | relative_url }}) 
 {: style="width: 50%;" class="center"} 
 *Fig. 3: 3D template mesh of a lioness used for GLoSS. Color denotes manually segmented 33 body parts. (Image source: [Zuffi et al, CVPR 2017](https://arxiv.org/abs/1611.07700))*
 
@@ -60,7 +60,7 @@ To get the shape deformation space for GLoSS: authors model scale and stretch de
 
 After that, we can fit GLoSS model to every 3D scan from the training set using the gradient-based methods.  
 
-![GLoSS fitting]({{ '/assets/images/SMALL-gloss-fitting.png' | relative_url }}) 
+![GLoSS fitting]({{ '/assets/images/SMAL-gloss-fitting.png' | relative_url }}) 
 {: style="width: 70%;" class="center"} 
 *Fig. 4: GLoSS fitting. (a) Initial template and scan. (b) GLoSS fit to scan. (c) GLoSS model showing the parts. (d) Merged mesh with global topology obtained by removing the duplicated vertices. (Image source: [Zuffi et al, CVPR 2017](https://arxiv.org/abs/1611.07700))*
 
@@ -90,10 +90,18 @@ We fit the SMAL model to the image by fitting its parameters and camera pose usi
 Reprojection error is computed by rendering the estimated SMAL mesh, projecting it on the input image, and comparing the predicted keypoints and silhouette with those defined on the input image.
 The local optimum is found by iterative optimization. Optimization for a single image typically takes less than a minute.
 
+
+## Results
 ![Results]({{ '/assets/images/SMAL-results.png' | relative_url }}) 
 {: style="width: 100%;" class="center"} 
 *Fig. 7: Results of the SMAL model fit to real images using manually obtained 2D keypoints and segmentation. (Image source: [Zuffi et al, CVPR 2017](https://arxiv.org/abs/1611.07700))*
  
+![SMAL Shape Demo]({{ '/assets/images/SMAL-demo-animation.gif' | relative_url }}) 
+{: style="width: 85%;" class="center"} 
+*Fig. 8: Interactive [demo](https://dawars.me/smal/) of SMAL model.
+
+You can explore a [web-demo](https://dawars.me/smal/) which allows you to interactively change the SMAL shape parameters and see how the output mesh transforms (Fig. 8).
+More resutls can be fount at [http://smal.is.tuebingen.mpg.de/](http://smal.is.tuebingen.mpg.de/downloads).
 
 ## Conclusion
 Authors showed that starting with toys' 3D scans, we can learn a model that generalizes to images of real animals as well as to types of animals not seen during training.
