--- a/_posts/2020-08-01-SMAL-CVPR2017.md
+++ b/_posts/2020-08-01-SMAL-CVPR2017.md
@@ -97,10 +97,10 @@ The local optimum is found by iterative optimization. Optimization for a single 
 *Fig. 7: Results of the SMAL model fit to real images using manually obtained 2D keypoints and segmentation. (Image source: [Zuffi et al, CVPR 2017](https://arxiv.org/abs/1611.07700))*
  
 ![SMAL Shape Demo]({{ '/assets/images/SMAL-demo-animation.gif' | relative_url }}) 
-{: style="width: 85%;" class="center"} 
-*Fig. 8: Interactive [demo](https://dawars.me/smal/) of SMAL model.
+{: style="width: 100%;" class="center"} 
+*Fig. 8: Interactive [demo](https://dawars.me/smal/) of SMAL model.*
 
-You can explore a [web-demo](https://dawars.me/smal/) which allows you to interactively change the SMAL shape parameters and see how the output mesh transforms (Fig. 8).
+You can explore a [web-demo](https://dawars.me/smal/) which allows you to interactively change the SMAL shape parameters and see how the output mesh transforms (Fig. 8).  
 More resutls can be fount at [http://smal.is.tuebingen.mpg.de/](http://smal.is.tuebingen.mpg.de/downloads).
 
 ## Conclusion
