--- a/_posts/2020-08-01-SMAL-CVPR2017.md
+++ b/_posts/2020-08-01-SMAL-CVPR2017.md
@@ -101,7 +101,7 @@ The local optimum is found by iterative optimization. Optimization for a single 
 *Fig. 8: Interactive [demo](https://dawars.me/smal/) of SMAL model.*
 
 You can explore a [web-demo](https://dawars.me/smal/) which allows you to interactively change the SMAL shape parameters and see how the output mesh transforms (Fig. 8).  
-More resutls can be fount at [http://smal.is.tuebingen.mpg.de/](http://smal.is.tuebingen.mpg.de/downloads).
+More results can be found at [http://smal.is.tuebingen.mpg.de/](http://smal.is.tuebingen.mpg.de/downloads).
 
 ## Conclusion
 Authors showed that starting with toys' 3D scans, we can learn a model that generalizes to images of real animals as well as to types of animals not seen during training.
