add thumbnails, add new fonts, add Kaggle Lyft post

--- a/_posts/2020-08-01-SMAL-CVPR2017.md
+++ b/_posts/2020-08-01-SMAL-CVPR2017.md
@@ -4,6 +4,7 @@ comments: true
 title: "Multi-Animal Linear model (SMAL): Modeling the 3D Shape and Pose of Animals"
 date: 2020-08-01
 tags: papers cv
+thumbnail: "/assets/images/SMAL-header.png"
 ---
 
 
@@ -55,7 +56,7 @@ For this purpose authors used an off-the-shelf 3D mesh of a lioness which is alr
 {: style="width: 50%;" class="center"} 
 *Fig. 3: 3D template mesh of a lioness used for GLoSS. Color denotes manually segmented 33 body parts. (Image source: [Zuffi et al, CVPR 2017](https://arxiv.org/abs/1611.07700))*
 
-To get the pose deformation space for GloSS, authors perform PCA on the vertices of each frame in the animated 3D sequence.  
+To get the pose deformation space for GloSS, the authors perform PCA on the vertices of each frame in the animated 3D sequence.  
 To get the shape deformation space for GLoSS: authors model scale and stretch deformations along x,y,z axes for each body part using a Gaussian distribution.  
 
 After that, we can fit GLoSS model to every 3D scan from the training set using the gradient-based methods.  
@@ -74,7 +75,7 @@ with the ARAP refinement (right). The fit to the scan is much tighter after refi
 
 ### 2. Learning parametric SMAL model
 Now, given the poses estimated with GLoSS, authors model shape variation across training dataset by   
-1. Brining all the registered templates into the same **neutral pose** using LBS;
+1. Bringing all the registered templates into the same **neutral pose** using LBS;
 2. **Learn shape space** by computing the mean shape and the principal components (PCA), which capture shape differences between the animals.
 
 ![Shape space]({{ '/assets/images/SMAL-PCA.png' | relative_url }}) 
